# vit

./: CMakeLists.txt  Dockerfile  README.md  vit.py  vit_config.yaml
cuda/: Dockerfile  activations.cu  activations.cuh  attention.cu  attention.cuh  common.cuh  conv2d.cu  conv2d.cuh  cuda_utils.cuh  embeddings.cu  embeddings.cuh  layernorm.cu  layernorm.cuh  main.cu  matmul.cu  matmul.cuh  residual.cu  residual.cuh  softmax.cu  softmax.cuh  vit.cu  vit.cuh
python/: create_dataset.py  dataprep.py  train.py  utils.py
src/: activations.h  attention.h  conv2d.h  dataprep.h  embeddings.h  init_weights.h  layernorm.h  main.cpp  matmul.h  residual.h  softmax.h  utils.h  vit.cpp  vit.h
test/: activations.cpp  attention.cpp  conv2d.cpp  embeddings.cpp  layernorm.cpp  matmul.cpp  residual.cpp  softmax.cpp
